chore: filter eventParticipant by criteria
